# procflamegraph

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  build-release.sh  rust-toolchain.toml
.cargo/: config.toml
src/: args.rs  coroutines.rs  errors.rs  main.rs  output.rs  output_peeker.rs  ptrace_syscall_info.rs  sys_linux.rs  syscall_list.rs  take_over_process.rs  tracee.rs  tracer.rs  unixutils.rs
src/sys_linux/: epoll.rs  fd.rs  kernel_version.rs  macros.rs  mod.rs  proc.rs  ptrace.rs  ptrace_syscall_info.rs  wait.rs
tests/: Makefile  catch-raised-signal.expected-output  catch-raised-signal.sh  detach-no-main.expected-output  detach-no-main.sh  detach.expected-output  detach.sh  factorial-process-tree.cpp  factorial-process-tree.expected-output  factorial-process-tree.sh  help.expected-output  help.sh  itself-after-detaching.expected-output  itself-after-detaching.sh  kill-self-signal.cpp  kill-self-signal.sh  show-threads.expected-output  show-threads.sh  simple.cpp  simple.expected-output  simple.sh  vfork.expected-output  vfork.sh
tests/helpers/: catch-raised-signal.cpp  common.hpp  execve-from-thread.cpp  no-main.cpp  non-main-thread-exit-group.cpp  vfork.cpp
