[package]
name = "procflamegraph"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.29.0", features = [
    "ptrace",
    "signal",
    "fs",
    "uio",
    "process",
] }
libc = "0.2.169"
lexopt = "0.3.0"
bstr = { version = "1.11.3", default-features = false, features = [
    "std",
    "alloc",
] }
bytemuck = "1.21.0"

[profile.release]
lto = true
codegen-units = 1
