[package]
name = "procflamegraph"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.30.0", features = [
    "ptrace",
    "signal",
    "fs",
    "uio",
    "process",
    "feature",
    "zerocopy",
    "event"
] }
libc = "0.2.172"
lexopt = "0.3.1"
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
bytemuck = "1.23.0"
struson = { version = "0.6.0", features = ["simple-api"] }
structstruck = "0.5.0"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
